[project]
name = "dodge-game"
version = "0.1.0"
description = "A simple dodge the asteroids game built with Pygame."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",

]

[tool.uv]
package = true

[project.scripts]
dodge-game = "dodge_game.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["assets", "fonts"]